code and documentation for sort costly
